--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>英語 B1→B2 進階學習平台</title>
     <style>
         * { margin:0; padding:0; box-sizing:border-box; }
-        body { font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Arial,sans-serif; background-color:#FFFEF8; color:#3D3D3D; line-height:1.6; }
+        body { font-family:-apple-system,BlinkMacSystemFont,'Segoe UI','Microsoft YaHei',sans-serif; background-color:#FFFEF8; color:#3D3D3D; line-height:1.6; }
         header { background:linear-gradient(135deg,#F5E8D9 0%,#FDD9BE 100%); padding:20px; box-shadow:0 2px 4px rgba(0,0,0,0.05); display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; }
-        h1 { font-size:24px; color:#A89968; }
+        h1 { font-size:24px; color:#A89968; margin:0; }
         .header-right { display:flex; gap:15px; align-items:center; }
         .user-name { font-weight:bold; color:#A89968; font-size:14px; }
         button { background-color:#F5C197; color:#3D3D3D; border:none; padding:10px 15px; border-radius:6px; cursor:pointer; font-size:14px; font-weight:500; transition:all 0.3s ease; }
@@ -19,51 +19,52 @@
         .tabs { display:flex; gap:10px; margin-bottom:20px; flex-wrap:wrap; }
         .tab { padding:12px 18px; background-color:#FDD9BE; color:#3D3D3D; border:none; border-radius:6px; cursor:pointer; font-weight:500; transition:all 0.3s ease; }
         .tab.active { background-color:#F5C197; color:white; }
-        .tab-content { display:none; }
+        .tab-content { display:none; padding:15px 0; }
         .tab-content.active { display:block; }
-        .stats-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(150px,1fr)); gap:15px; }
+        .stats-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(140px,1fr)); gap:15px; }
         .stat-card { background-color:#FFF5E6; padding:15px; border-radius:8px; border:2px solid #FDD9BE; text-align:center; }
         .stat-number { font-size:28px; font-weight:bold; color:#F5C197; }
-        .stat-label { font-size:13px; color:#6B6B6B; margin-top:5px; }
-        .learning-blocks { display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:20px; }
-        .learning-block { background-color:#FFF5E6; padding:20px; border-radius:8px; border-left:4px solid #F0B8A8; }
-        .block-title { font-weight:bold; color:#A89968; margin-bottom:8px; }
-        .block-content { color:#6B6B6B; font-size:14px; }
-        .vocab-card { background-color:#FFF5E6; padding:15px; border-radius:8px; margin-bottom:12px; border-left:4px solid #F0B8A8; }
-        .vocab-word { font-size:16px; font-weight:bold; color:#A89968; }
-        .vocab-pronunciation { color:#9B8B7E; font-size:12px; }
-        .vocab-meaning { color:#3D3D3D; margin-top:5px; }
-        .vocab-example { color:#6B6B6B; font-size:12px; font-style:italic; margin-top:5px; }
-        .play-btn { background-color:#F0B8A8; color:white; border:none; padding:6px 10px; border-radius:4px; cursor:pointer; font-size:12px; margin-top:8px; }
-        .grammar-q { background-color:#FFF5E6; padding:15px; border-radius:8px; margin-bottom:15px; border-left:4px solid #F0B8A8; }
-        .q-text { font-weight:bold; color:#3D3D3D; margin-bottom:12px; }
-        .options { display:grid; grid-template-columns:repeat(auto-fit,minmax(120px,1fr)); gap:10px; margin-bottom:10px; }
-        .opt-btn { padding:10px; background-color:#FDD9BE; color:#3D3D3D; border:2px solid transparent; border-radius:6px; cursor:pointer; }
+        .stat-label { font-size:12px; color:#6B6B6B; margin-top:5px; }
+        .learning-blocks { display:grid; grid-template-columns:repeat(auto-fit,minmax(180px,1fr)); gap:15px; }
+        .learning-block { background-color:#FFF5E6; padding:15px; border-radius:8px; border-left:4px solid #F0B8A8; }
+        .block-title { font-weight:bold; color:#A89968; margin-bottom:8px; font-size:14px; }
+        .block-content { color:#6B6B6B; font-size:13px; line-height:1.5; }
+        .vocab-card { background-color:#FFF5E6; padding:12px; border-radius:8px; margin-bottom:10px; border-left:4px solid #F0B8A8; }
+        .vocab-word { font-size:15px; font-weight:bold; color:#A89968; }
+        .vocab-pronunciation { color:#9B8B7E; font-size:11px; }
+        .vocab-meaning { color:#3D3D3D; margin-top:4px; font-size:13px; }
+        .vocab-example { color:#6B6B6B; font-size:11px; font-style:italic; margin-top:4px; }
+        .play-btn { background-color:#F0B8A8; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer; font-size:11px; margin-top:6px; }
+        .play-btn:hover { background-color:#F5C197; }
+        .grammar-q { background-color:#FFF5E6; padding:12px; border-radius:8px; margin-bottom:12px; border-left:4px solid #F0B8A8; }
+        .q-text { font-weight:bold; color:#3D3D3D; margin-bottom:10px; font-size:13px; }
+        .options { display:grid; grid-template-columns:repeat(auto-fit,minmax(110px,1fr)); gap:8px; margin-bottom:8px; }
+        .opt-btn { padding:8px; background-color:#FDD9BE; color:#3D3D3D; border:2px solid transparent; border-radius:6px; cursor:pointer; font-size:12px; }
         .opt-btn:hover { border-color:#F5C197; }
         .opt-btn.correct { background-color:#C9A876; color:white; }
-        .explain { background-color:#F9F6F0; padding:10px; border-radius:6px; margin-top:8px; font-size:12px; color:#6B6B6B; display:none; }
+        .explain { background-color:#F9F6F0; padding:8px; border-radius:6px; margin-top:6px; font-size:11px; color:#6B6B6B; display:none; }
         .explain.show { display:block; }
-        .writing-ex { background-color:#FFF5E6; padding:15px; border-radius:8px; border-left:4px solid #F0B8A8; }
-        .ex-label { font-weight:bold; color:#A89968; margin-bottom:10px; }
-        .ex-content { color:#3D3D3D; margin-bottom:12px; font-size:14px; }
-        .ex-hint { background-color:#F9F6F0; padding:8px; border-radius:6px; margin-bottom:12px; font-size:12px; color:#6B6B6B; }
-        textarea { width:100%; min-height:120px; padding:12px; border:2px solid #FDD9BE; border-radius:6px; font-size:14px; color:#3D3D3D; margin-bottom:10px; }
+        .writing-ex { background-color:#FFF5E6; padding:12px; border-radius:8px; border-left:4px solid #F0B8A8; }
+        .ex-label { font-weight:bold; color:#A89968; margin-bottom:8px; font-size:14px; }
+        .ex-content { color:#3D3D3D; margin-bottom:10px; font-size:13px; }
+        .ex-hint { background-color:#F9F6F0; padding:6px; border-radius:6px; margin-bottom:10px; font-size:11px; color:#6B6B6B; }
+        textarea { width:100%; min-height:100px; padding:10px; border:2px solid #FDD9BE; border-radius:6px; font-size:13px; color:#3D3D3D; margin-bottom:8px; font-family:Arial,sans-serif; }
         textarea:focus { outline:none; border-color:#F5C197; }
-        .word-count { font-size:12px; color:#6B6B6B; margin-bottom:12px; }
-        .submit-btn { background-color:#C9A876; color:white; padding:10px 20px; }
+        .word-count { font-size:11px; color:#6B6B6B; margin-bottom:10px; }
+        .submit-btn { background-color:#C9A876; color:white; padding:10px 20px; font-weight:bold; }
         .submit-btn:hover { background-color:#A89968; }
-        .feedback { background-color:#F9F6F0; padding:12px; border-radius:6px; margin-top:12px; font-size:13px; display:none; }
+        .feedback { background-color:#F9F6F0; padding:10px; border-radius:6px; margin-top:10px; font-size:12px; display:none; }
         .feedback.show { display:block; }
         .modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background-color:rgba(0,0,0,0.5); justify-content:center; align-items:center; }
         .modal.show { display:flex; }
-        .modal-content { background-color:#F5E8D9; padding:30px; border-radius:10px; max-width:400px; width:90%; }
+        .modal-content { background-color:#F5E8D9; padding:25px; border-radius:10px; max-width:400px; width:90%; max-height:80vh; overflow-y:auto; }
         .modal-content h3 { color:#A89968; margin-bottom:15px; }
-        .modal-content input { width:100%; padding:10px; margin-bottom:15px; border:2px solid #FDD9BE; border-radius:6px; font-size:14px; }
+        .modal-content input { width:100%; padding:10px; margin-bottom:12px; border:2px solid #FDD9BE; border-radius:6px; font-size:13px; }
         .modal-btns { display:flex; gap:10px; justify-content:flex-end; }
-        .user-list { max-height:200px; overflow-y:auto; margin-bottom:15px; }
-        .user-item { padding:10px; background-color:#FFF5E6; border-radius:6px; margin-bottom:8px; cursor:pointer; }
+        .user-list { max-height:150px; overflow-y:auto; margin-bottom:12px; }
+        .user-item { padding:8px; background-color:#FFF5E6; border-radius:6px; margin-bottom:6px; cursor:pointer; font-size:13px; }
         .user-item:hover { background-color:#FDD9BE; }
-        @media (max-width:768px) { header { flex-direction:column; gap:10px; } .learning-blocks { grid-template-columns:1fr; } }
+        @media (max-width:768px) { h1 { font-size:20px; } .learning-blocks { grid-template-columns:1fr; } .stats-grid { grid-template-columns:repeat(2,1fr); } }
     </style>
 </head>
 <body>
@@ -76,7 +77,6 @@
     </header>
 
     <div class="container">
-        <!-- 統計 -->
         <div class="section">
             <h2>📊 學習進度統計</h2>
             <div class="stats-grid">
@@ -87,7 +87,6 @@
             </div>
         </div>
 
-        <!-- 5-5-5方法 -->
         <div class="section">
             <h2>⏱️ 5-5-5 日常學習方法</h2>
             <div class="learning-blocks">
@@ -97,7 +96,6 @@
             </div>
         </div>
 
-        <!-- 每週主題 -->
         <div class="section">
             <h2>📅 每週學習主題計劃</h2>
             <div class="learning-blocks">
@@ -111,20 +109,17 @@
             </div>
         </div>
 
-        <!-- B2詞彙 -->
         <div class="section">
             <h2>📚 B2 進階詞彙學習</h2>
             <div id="vocabularyContainer"></div>
         </div>
 
-        <!-- 文法 -->
         <div class="section">
             <h2>📖 B2 進階文法學習</h2>
             <div class="tabs" id="grammarTabs"></div>
             <div id="grammarContent"></div>
         </div>
 
-        <!-- 寫作 -->
         <div class="section">
             <h2>✍️ 寫作練習工作區</h2>
             <div class="tabs" id="writingTabs">
@@ -136,7 +131,6 @@
         </div>
     </div>
 
-    <!-- 用戶模態 -->
     <div class="modal" id="userModal">
         <div class="modal-content">
             <h3>用戶管理</h3>
@@ -144,13 +138,3 @@
             <input type="text" id="newUserInput" placeholder="輸入新用戶名稱">
             <div class="modal-btns">
                 <button onclick="closeUserModal()">取消</button>
-                <button onclick="addNewUser()" class="submit-btn">創建用戶</button>
-            </div>
-        </div>
-    </div>
-
-    <script>
-        // 文法數據
-        const grammarData = [
-            { topic: '現在完成式 vs 過去完成式', questions: [
-                { q: 'I _____ in this city for 10 years.', opts: ['lived','have lived','had lived','was living'], ans
