Refactor CSS styles and update vocabulary data variable

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         .section { background-color:#F5E8D9; margin:20px 0; padding:25px; border-radius:10px; border-left:5px solid #F5C197; box-shadow:0 2px 8px rgba(0,0,0,0.05); }
         .section h2 { color:#A89968; margin-bottom:20px; font-size:22px; }
         .tabs { display:flex; gap:10px; margin-bottom:20px; flex-wrap:wrap; }
-        .tab { padding:12px 18px; background-color:#FDD9BE; color:#3D3D3D; border:none; border-radius:6px; cursor:pointer; font-weight:500; transition:all 0.3s ease; }
+        .tab { padding:12px 18px; background-color:#FDD9BE; color:#3D3D3D; border:none; border-radius:6px; cursor:pointer; font-weight:500; }
         .tab.active { background-color:#F5C197; color:white; }
-        .tab-content { display:none; padding:15px 0; }
+        .tab-content { display:none; }
         .tab-content.active { display:block; }
         .stats-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(140px,1fr)); gap:15px; }
         .stat-card { background-color:#FFF5E6; padding:15px; border-radius:8px; border:2px solid #FDD9BE; text-align:center; }
@@ -28,27 +28,27 @@
         .learning-blocks { display:grid; grid-template-columns:repeat(auto-fit,minmax(180px,1fr)); gap:15px; }
         .learning-block { background-color:#FFF5E6; padding:15px; border-radius:8px; border-left:4px solid #F0B8A8; }
         .block-title { font-weight:bold; color:#A89968; margin-bottom:8px; font-size:14px; }
-        .block-content { color:#6B6B6B; font-size:13px; line-height:1.5; }
+        .block-content { color:#6B6B6B; font-size:13px; }
         .vocab-card { background-color:#FFF5E6; padding:12px; border-radius:8px; margin-bottom:10px; border-left:4px solid #F0B8A8; }
-        .vocab-word { font-size:15px; font-weight:bold; color:#A89968; }
-        .vocab-pronunciation { color:#9B8B7E; font-size:11px; }
-        .vocab-meaning { color:#3D3D3D; margin-top:4px; font-size:13px; }
-        .vocab-example { color:#6B6B6B; font-size:11px; font-style:italic; margin-top:4px; }
-        .play-btn { background-color:#F0B8A8; color:white; border:none; padding:5px 10px; border-radius:4px; cursor:pointer; font-size:11px; margin-top:6px; }
+        .vocab-word { font-size:15px; font-weight:bold; color:#A89968; margin-bottom:3px; }
+        .vocab-info { color:#9B8B7E; font-size:11px; margin-bottom:3px; }
+        .vocab-meaning { color:#3D3D3D; margin-bottom:3px; font-size:13px; }
+        .vocab-example { color:#6B6B6B; font-size:11px; font-style:italic; margin-top:3px; }
+        .play-btn { background-color:#F0B8A8; color:white; border:none; padding:4px 8px; border-radius:4px; cursor:pointer; font-size:11px; margin-top:5px; }
         .play-btn:hover { background-color:#F5C197; }
         .grammar-q { background-color:#FFF5E6; padding:12px; border-radius:8px; margin-bottom:12px; border-left:4px solid #F0B8A8; }
         .q-text { font-weight:bold; color:#3D3D3D; margin-bottom:10px; font-size:13px; }
-        .options { display:grid; grid-template-columns:repeat(auto-fit,minmax(110px,1fr)); gap:8px; margin-bottom:8px; }
+        .options { display:grid; grid-template-columns:repeat(auto-fit,minmax(100px,1fr)); gap:8px; margin-bottom:8px; }
         .opt-btn { padding:8px; background-color:#FDD9BE; color:#3D3D3D; border:2px solid transparent; border-radius:6px; cursor:pointer; font-size:12px; }
         .opt-btn:hover { border-color:#F5C197; }
         .opt-btn.correct { background-color:#C9A876; color:white; }
         .explain { background-color:#F9F6F0; padding:8px; border-radius:6px; margin-top:6px; font-size:11px; color:#6B6B6B; display:none; }
         .explain.show { display:block; }
         .writing-ex { background-color:#FFF5E6; padding:12px; border-radius:8px; border-left:4px solid #F0B8A8; margin-bottom:15px; }
-        .ex-label { font-weight:bold; color:#A89968; margin-bottom:8px; font-size:14px; }
+        .ex-label { font-weight:bold; color:#A89968; margin-bottom:8px; }
         .ex-content { color:#3D3D3D; margin-bottom:10px; font-size:13px; }
         .ex-hint { background-color:#F9F6F0; padding:6px; border-radius:6px; margin-bottom:10px; font-size:11px; color:#6B6B6B; }
-        textarea { width:100%; min-height:100px; padding:10px; border:2px solid #FDD9BE; border-radius:6px; font-size:13px; color:#3D3D3D; margin-bottom:8px; font-family:Arial,sans-serif; }
+        textarea { width:100%; min-height:100px; padding:10px; border:2px solid #FDD9BE; border-radius:6px; font-size:13px; margin-bottom:8px; }
         textarea:focus { outline:none; border-color:#F5C197; }
         .word-count { font-size:11px; color:#6B6B6B; margin-bottom:10px; }
         .submit-btn { background-color:#C9A876; color:white; padding:10px 20px; font-weight:bold; }
@@ -57,14 +57,14 @@
         .feedback.show { display:block; }
         .modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background-color:rgba(0,0,0,0.5); justify-content:center; align-items:center; }
         .modal.show { display:flex; }
-        .modal-content { background-color:#F5E8D9; padding:25px; border-radius:10px; max-width:400px; width:90%; max-height:80vh; overflow-y:auto; }
+        .modal-content { background-color:#F5E8D9; padding:25px; border-radius:10px; max-width:400px; width:90%; }
         .modal-content h3 { color:#A89968; margin-bottom:15px; }
         .modal-content input { width:100%; padding:10px; margin-bottom:12px; border:2px solid #FDD9BE; border-radius:6px; font-size:13px; }
         .modal-btns { display:flex; gap:10px; justify-content:flex-end; }
         .user-list { max-height:150px; overflow-y:auto; margin-bottom:12px; }
         .user-item { padding:8px; background-color:#FFF5E6; border-radius:6px; margin-bottom:6px; cursor:pointer; font-size:13px; }
         .user-item:hover { background-color:#FDD9BE; }
-        @media (max-width:768px) { h1 { font-size:20px; } .learning-blocks { grid-template-columns:1fr; } .stats-grid { grid-template-columns:repeat(2,1fr); } }
+        @media (max-width:768px) { h1 { font-size:20px; } .learning-blocks { grid-template-columns:1fr; } }
     </style>
 </head>
 <body>
@@ -144,5 +144,4 @@
     </div>
 
     <script>
-// 詞彙數據 - 60個B2進階單字
-const vocabularyData =
+const vocabData=
