--- a/index.html
+++ b/index.html
@@ -5,73 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>英語 B1→B2 進階學習平台</title>
     <style>
-        * { margin:0; padding:0; box-sizing:border-box; }
-        body { font-family:-apple-system,BlinkMacSystemFont,'Segoe UI','Microsoft YaHei',sans-serif; background-color:#FFFEF8; color:#3D3D3D; line-height:1.6; }
-        header { background:linear-gradient(135deg,#F5E8D9 0%,#FDD9BE 100%); padding:20px; box-shadow:0 2px 4px rgba(0,0,0,0.05); display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; }
-        h1 { font-size:24px; color:#A89968; margin:0; }
-        .header-right { display:flex; gap:15px; align-items:center; }
-        .user-name { font-weight:bold; color:#A89968; font-size:14px; }
-        button { background-color:#F5C197; color:#3D3D3D; border:none; padding:10px 15px; border-radius:6px; cursor:pointer; font-size:14px; font-weight:500; transition:all 0.3s ease; }
-        button:hover { background-color:#F0B8A8; }
-        .container { max-width:1200px; margin:0 auto; padding:20px; }
-        .section { background-color:#F5E8D9; margin:20px 0; padding:25px; border-radius:10px; border-left:5px solid #F5C197; box-shadow:0 2px 8px rgba(0,0,0,0.05); }
-        .section h2 { color:#A89968; margin-bottom:20px; font-size:22px; }
-        .tabs { display:flex; gap:10px; margin-bottom:20px; flex-wrap:wrap; }
-        .tab { padding:12px 18px; background-color:#FDD9BE; color:#3D3D3D; border:none; border-radius:6px; cursor:pointer; font-weight:500; }
-        .tab.active { background-color:#F5C197; color:white; }
-        .tab-content { display:none; }
-        .tab-content.active { display:block; }
-        .stats-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(140px,1fr)); gap:15px; }
-        .stat-card { background-color:#FFF5E6; padding:15px; border-radius:8px; border:2px solid #FDD9BE; text-align:center; }
-        .stat-number { font-size:28px; font-weight:bold; color:#F5C197; }
-        .stat-label { font-size:12px; color:#6B6B6B; margin-top:5px; }
-        .learning-blocks { display:grid; grid-template-columns:repeat(auto-fit,minmax(180px,1fr)); gap:15px; }
-        .learning-block { background-color:#FFF5E6; padding:15px; border-radius:8px; border-left:4px solid #F0B8A8; }
-        .block-title { font-weight:bold; color:#A89968; margin-bottom:8px; font-size:14px; }
-        .block-content { color:#6B6B6B; font-size:13px; }
-        .vocab-card { background-color:#FFF5E6; padding:12px; border-radius:8px; margin-bottom:10px; border-left:4px solid #F0B8A8; }
-        .vocab-word { font-size:15px; font-weight:bold; color:#A89968; margin-bottom:3px; }
-        .vocab-info { color:#9B8B7E; font-size:11px; margin-bottom:3px; }
-        .vocab-meaning { color:#3D3D3D; margin-bottom:3px; font-size:13px; }
-        .vocab-example { color:#6B6B6B; font-size:11px; font-style:italic; margin-top:3px; }
-        .play-btn { background-color:#F0B8A8; color:white; border:none; padding:4px 8px; border-radius:4px; cursor:pointer; font-size:11px; margin-top:5px; }
-        .play-btn:hover { background-color:#F5C197; }
-        .grammar-q { background-color:#FFF5E6; padding:12px; border-radius:8px; margin-bottom:12px; border-left:4px solid #F0B8A8; }
-        .q-text { font-weight:bold; color:#3D3D3D; margin-bottom:10px; font-size:13px; }
-        .options { display:grid; grid-template-columns:repeat(auto-fit,minmax(100px,1fr)); gap:8px; margin-bottom:8px; }
-        .opt-btn { padding:8px; background-color:#FDD9BE; color:#3D3D3D; border:2px solid transparent; border-radius:6px; cursor:pointer; font-size:12px; }
-        .opt-btn:hover { border-color:#F5C197; }
-        .opt-btn.correct { background-color:#C9A876; color:white; }
-        .explain { background-color:#F9F6F0; padding:8px; border-radius:6px; margin-top:6px; font-size:11px; color:#6B6B6B; display:none; }
-        .explain.show { display:block; }
-        .writing-ex { background-color:#FFF5E6; padding:12px; border-radius:8px; border-left:4px solid #F0B8A8; margin-bottom:15px; }
-        .ex-label { font-weight:bold; color:#A89968; margin-bottom:8px; }
-        .ex-content { color:#3D3D3D; margin-bottom:10px; font-size:13px; }
-        .ex-hint { background-color:#F9F6F0; padding:6px; border-radius:6px; margin-bottom:10px; font-size:11px; color:#6B6B6B; }
-        textarea { width:100%; min-height:100px; padding:10px; border:2px solid #FDD9BE; border-radius:6px; font-size:13px; margin-bottom:8px; }
-        textarea:focus { outline:none; border-color:#F5C197; }
-        .word-count { font-size:11px; color:#6B6B6B; margin-bottom:10px; }
-        .submit-btn { background-color:#C9A876; color:white; padding:10px 20px; font-weight:bold; }
-        .submit-btn:hover { background-color:#A89968; }
-        .feedback { background-color:#F9F6F0; padding:10px; border-radius:6px; margin-top:10px; font-size:12px; display:none; }
-        .feedback.show { display:block; }
-        .modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background-color:rgba(0,0,0,0.5); justify-content:center; align-items:center; }
-        .modal.show { display:flex; }
-        .modal-content { background-color:#F5E8D9; padding:25px; border-radius:10px; max-width:400px; width:90%; }
-        .modal-content h3 { color:#A89968; margin-bottom:15px; }
-        .modal-content input { width:100%; padding:10px; margin-bottom:12px; border:2px solid #FDD9BE; border-radius:6px; font-size:13px; }
-        .modal-btns { display:flex; gap:10px; justify-content:flex-end; }
-        .user-list { max-height:150px; overflow-y:auto; margin-bottom:12px; }
-        .user-item { padding:8px; background-color:#FFF5E6; border-radius:6px; margin-bottom:6px; cursor:pointer; font-size:13px; }
-        .user-item:hover { background-color:#FDD9BE; }
-        @media (max-width:768px) { h1 { font-size:20px; } .learning-blocks { grid-template-columns:1fr; } }
+        *{margin:0;padding:0;box-sizing:border-box}
+        body{font-family:Arial,sans-serif;background:#FFFEF8;color:#3D3D3D;line-height:1.6}
+        header{background:linear-gradient(135deg,#F5E8D9,#FDD9BE);padding:20px;display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;box-shadow:0 2px 4px rgba(0,0,0,0.05)}
+        h1{font-size:24px;color:#A89968;margin:0}
+        .header-right{display:flex;gap:15px;align-items:center}
+        button{background:#F5C197;color:#3D3D3D;border:none;padding:10px 15px;border-radius:6px;cursor:pointer;font-size:14px;font-weight:500;transition:all 0.3s}
+        button:hover{background:#F0B8A8}
+        .container{max-width:1200px;margin:0 auto;padding:20px}
+        .section{background:#F5E8D9;margin:20px 0;padding:25px;border-radius:10px;border-left:5px solid #F5C197;box-shadow:0 2px 8px rgba(0,0,0,0.05)}
+        .section h2{color:#A89968;margin-bottom:20px;font-size:22px}
+        .tabs{display:flex;gap:10px;margin-bottom:20px;flex-wrap:wrap}
+        .tab{padding:12px 18px;background:#FDD9BE;color:#3D3D3D;border:none;border-radius:6px;cursor:pointer;font-weight:500;transition:all 0.3s}
+        .tab.active{background:#F5C197;color:white}
+        .tab-content{display:none}
+        .tab-content.active{display:block}
+        .stats-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(140px,1fr));gap:15px}
+        .stat-card{background:#FFF5E6;padding:15px;border-radius:8px;border:2px solid #FDD9BE;text-align:center}
+        .stat-number{font-size:28px;font-weight:bold;color:#F5C197}
+        .stat-label{font-size:12px;color:#6B6B6B;margin-top:5px}
+        .learning-blocks{display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:15px}
+        .learning-block{background:#FFF5E6;padding:15px;border-radius:8px;border-left:4px solid #F0B8A8}
+        .block-title{font-weight:bold;color:#A89968;margin-bottom:8px;font-size:14px}
+        .block-content{color:#6B6B6B;font-size:13px;line-height:1.5}
+        .vocab-card{background:#FFF5E6;padding:12px;border-radius:8px;margin-bottom:10px;border-left:4px solid #F0B8A8}
+        .vocab-word{font-size:15px;font-weight:bold;color:#A89968;margin-bottom:3px}
+        .vocab-pronunciation{color:#9B8B7E;font-size:11px;margin-bottom:3px}
+        .vocab-meaning{color:#3D3D3D;margin-top:4px;font-size:13px;margin-bottom:3px}
+        .vocab-example{color:#6B6B6B;font-size:11px;font-style:italic;margin-top:4px}
+        .play-btn{background:#F0B8A8;color:white;border:none;padding:5px 10px;border-radius:4px;cursor:pointer;font-size:11px;margin-top:6px}
+        .play-btn:hover{background:#F5C197}
+        .grammar-q{background:#FFF5E6;padding:12px;border-radius:8px;margin-bottom:12px;border-left:4px solid #F0B8A8}
+        .q-text{font-weight:bold;color:#3D3D3D;margin-bottom:10px;font-size:13px}
+        .options{display:grid;grid-template-columns:repeat(auto-fit,minmax(100px,1fr));gap:8px;margin-bottom:8px}
+        .opt-btn{padding:8px;background:#FDD9BE;color:#3D3D3D;border:2px solid transparent;border-radius:6px;cursor:pointer;font-size:12px}
+        .opt-btn:hover{border-color:#F5C197}
+        .opt-btn.correct{background:#C9A876;color:white}
+        .explain{background:#F9F6F0;padding:8px;border-radius:6px;margin-top:6px;font-size:11px;color:#6B6B6B;display:none}
+        .explain.show{display:block}
+        .writing-ex{background:#FFF5E6;padding:12px;border-radius:8px;border-left:4px solid #F0B8A8;margin-bottom:15px}
+        .ex-label{font-weight:bold;color:#A89968;margin-bottom:8px;font-size:14px}
+        .ex-content{color:#3D3D3D;margin-bottom:10px;font-size:13px}
+        .ex-hint{background:#F9F6F0;padding:6px;border-radius:6px;margin-bottom:10px;font-size:11px;color:#6B6B6B}
+        textarea{width:100%;min-height:100px;padding:10px;border:2px solid #FDD9BE;border-radius:6px;font-size:13px;color:#3D3D3D;margin-bottom:8px;font-family:Arial,sans-serif}
+        textarea:focus{outline:none;border-color:#F5C197}
+        .word-count{font-size:11px;color:#6B6B6B;margin-bottom:10px}
+        .submit-btn{background:#C9A876;color:white;padding:10px 20px;font-weight:bold}
+        .submit-btn:hover{background:#A89968}
+        .feedback{background:#F9F6F0;padding:10px;border-radius:6px;margin-top:10px;font-size:12px;display:none}
+        .feedback.show{display:block}
+        .modal{display:none;position:fixed;z-index:1000;left:0;top:0;width:100%;height:100%;background:rgba(0,0,0,0.5);justify-content:center;align-items:center}
+        .modal.show{display:flex}
+        .modal-content{background:#F5E8D9;padding:25px;border-radius:10px;max-width:400px;width:90%;box-shadow:0 4px 20px rgba(0,0,0,0.3)}
+        .modal-content h3{color:#A89968;margin-bottom:15px;font-size:18px}
+        .modal-content input{width:100%;padding:10px;margin-bottom:12px;border:2px solid #FDD9BE;border-radius:6px;font-size:13px}
+        .modal-btns{display:flex;gap:10px;justify-content:flex-end}
+        .user-list{max-height:150px;overflow-y:auto;margin-bottom:12px}
+        .user-item{padding:8px;background:#FFF5E6;border-radius:6px;margin-bottom:6px;cursor:pointer;font-size:13px;border-left:3px solid #F0B8A8}
+        .user-item:hover{background:#FDD9BE}
+        @media (max-width:768px){h1{font-size:20px}.learning-blocks{grid-template-columns:1fr}.stats-grid{grid-template-columns:repeat(2,1fr)}}
     </style>
 </head>
 <body>
     <header>
         <div><h1>🌍 英語 B1→B2 進階學習平台</h1></div>
         <div class="header-right">
-            <span class="user-name" id="currentUser">未登入</span>
+            <span id="currentUser" style="font-weight:bold;color:#A89968;font-size:14px">未登入</span>
             <button onclick="openUserModal()">切換用戶</button>
         </div>
     </header>
@@ -80,10 +79,10 @@
         <div class="section">
             <h2>📊 學習進度統計</h2>
             <div class="stats-grid">
-                <div class="stat-card"><div class="stat-number" id="studyDays">0</div><div class="stat-label">學習天數</div></div>
-                <div class="stat-card"><div class="stat-number" id="consecutiveDays">0</div><div class="stat-label">連續天數</div></div>
-                <div class="stat-card"><div class="stat-number" id="vocabularyCount">0</div><div class="stat-label">學習單字</div></div>
-                <div class="stat-card"><div class="stat-number" id="writingCount">0</div><div class="stat-label">完成寫作</div></div>
+                <div class="stat-card"><div class="stat-number" id="d1">0</div><div class="stat-label">學習天數</div></div>
+                <div class="stat-card"><div class="stat-number" id="d2">0</div><div class="stat-label">連續天數</div></div>
+                <div class="stat-card"><div class="stat-number" id="d3">0</div><div class="stat-label">學習單字</div></div>
+                <div class="stat-card"><div class="stat-number" id="d4">0</div><div class="stat-label">完成寫作</div></div>
             </div>
         </div>
 
@@ -109,33 +108,24 @@
             </div>
         </div>
 
-        <div class="section">
-            <h2>📚 B2 進階詞彙學習</h2>
-            <div id="vocabularyContainer"></div>
-        </div>
-
-        <div class="section">
-            <h2>📖 B2 進階文法學習</h2>
-            <div class="tabs" id="grammarTabs"></div>
-            <div id="grammarContent"></div>
-        </div>
-
+        <div class="section"><h2>📚 B2 進階詞彙學習</h2><div id="vc"></div></div>
+        <div class="section"><h2>📖 B2 進階文法學習</h2><div id="gt"></div><div id="gc"></div></div>
         <div class="section">
             <h2>✍️ 寫作練習工作區</h2>
-            <div class="tabs" id="writingTabs">
-                <button class="tab active" onclick="switchWritingTab(0)">級別1：句子組合</button>
-                <button class="tab" onclick="switchWritingTab(1)">級別2：段落寫作</button>
-                <button class="tab" onclick="switchWritingTab(2)">級別3：短文創作</button>
+            <div class="tabs" id="wt">
+                <button class="tab active" onclick="swW(0)">級別1：句子組合</button>
+                <button class="tab" onclick="swW(1)">級別2：段落寫作</button>
+                <button class="tab" onclick="swW(2)">級別3：短文創作</button>
             </div>
-            <div id="writingContent"></div>
+            <div id="wc"></div>
         </div>
     </div>
 
-    <div class="modal" id="userModal">
+    <div class="modal" id="um">
         <div class="modal-content">
             <h3>用戶管理</h3>
-            <div class="user-list" id="userList"></div>
-            <input type="text" id="newUserInput" placeholder="輸入新用戶名稱">
+            <div class="user-list" id="ul"></div>
+            <input id="nui" placeholder="輸入新用戶名稱" style="width:100%;padding:10px;border:2px solid #FDD9BE;border-radius:6px;margin-bottom:12px">
             <div class="modal-btns">
                 <button onclick="closeUserModal()">取消</button>
                 <button onclick="addNewUser()" class="submit-btn">創建用戶</button>
@@ -144,4 +134,4 @@
     </div>
 
     <script>
-const vocabData=
+        const vd=
